--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     display: flex;
     align-items: center;
     height: 100vh;
+    margin: ;
 }
 #calculator{
     font-family: Arial, Helvetica, sans-serif;
